resources/cover.css
/*
 * Globals
 */

/* Links */
a,
a:focus,
a:hover {
  color: #696969;
}

/* Custom default button */
.btn-secondary,
.btn-secondary:hover,
.btn-secondary:focus {
  color: #333;
  text-shadow: none; /* Prevent inheritance from `body` */
  background-color: #fff;
  border: .05rem solid #fff;
}


/*
 * Base structure
 */

html,
body {
  height: 100%;
  background-color: #333;
}
body {
  color: #fff;
  text-align: center;
}

/* Extra markup and styles for table-esque vertical and horizontal centering */
.site-wrapper {
  display: table;
  width: 100%;
  height: 100%; /* For at least Firefox */
  min-height: 100%;
  -webkit-box-shadow: inset 0 0 5rem rgba(0,0,0,.5);
          box-shadow: inset 0 0 5rem rgba(0,0,0,.5);
  text-shadow: 0 .05rem 1rem rgba(0,0,0,.5);
  z-index: 1;
  position: relative;
  background-color: #333;
  background-image: url('/static/images/background-small-dark.jpg');
  background-size: cover;
}
.site-wrapper-inner {
  display: table-cell;
  vertical-align: top;
}
.cover-container {
  margin-right: auto;
  margin-left: auto;
}

/* Padding for spacing */
.inner {
  padding: 2rem 0rem;
}


/*
 * Header
 */

.masthead {
  margin-bottom: 2rem;
}

.masthead-brand {
  margin-bottom: 0;
}

.nav-masthead .nav-link {
  padding: .25rem 0;
  font-weight: bold;
  color: rgba(255,255,255,.5);
  background-color: transparent;
  border-bottom: .25rem solid transparent;
}

.nav-masthead .nav-link:hover,
.nav-masthead .nav-link:focus {
  border-bottom-color: rgba(255,255,255,.25);
}

.nav-masthead .nav-link + .nav-link {
  margin-left: 1rem;
}

.nav-masthead .active {
  color: #fff;
  border-bottom-color: #fff;
}

@media (min-width: 576px) {
  .masthead-brand {
    float: left;
  }
  .nav-masthead {
    float: right;
  }
}

.cover-heading {
  font-size: 4em;
}

.lead {
  font-size: 2em;
}

.media-links {
  margin-top: 12px;
  font-size: 1.2em;
}

.media-links ul {
  padding: 0;
}

.media-links li {
  display: inline;
}

.media-links .fa {
  text-decoration: none;
  color: #fff;
  transition: color .15s ease-in-out;
  margin-right: 10px;
}

.media-links .fa:hover {
  color: #545454;
}

#resume-link {
  margin: 0;
}

@media (max-width: 575px) {
  
  .site-wrapper {
    height: 50vh;
    min-height: 50vh;
  }
  
  .cover-container {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    margin: 0;
  }
}

/*
 * Cover
 */

.cover {
  padding: 0 1.5rem;
}
.cover .btn-lg {
  padding: .75rem 1.25rem;
  font-weight: bold;
}


/*
 * Footer
 */

.mastfoot {
  color: rgba(255,255,255,.5);
}


/*
 * Affix and center
 */

@media (min-width: 576px) {
  /* Pull out the header and footer */
  .masthead {
    position: fixed;
    top: 0;
  }
  .mastfoot {
    position: fixed;
    bottom: 0;
  }
  /* Start the vertical centering */
  .site-wrapper-inner {
    vertical-align: middle;
  }
  /* Handle the widths */
  .masthead,
  .mastfoot,
  .cover-container {
    width: 100%; /* Must be percentage or pixels for horizontal alignment */
  }
}

@media (min-width: 62em) {
  .masthead,
  .mastfoot,
  .cover-container {
    width: 42rem;
  }
}

/*
 * Body Content
 */

@media (max-width: 575px) {
  
  .hidden-xs {
    height: 0;
    width: 0;
    display: none;
  }
  
}

.body-content {
  background-color: white;
  color: #696969;
}

/*
 * About
 */

.about-container {
  height: 50vh;
  min-height: 430px;
  padding: 60px;
  z-index: 1;
  position: relative;
  background-color: #fff;
}

.about-content {
  height: 100%;
  width: 100%;
}

.jetpack-img {
  position: fixed;
  visibility: hidden;
}

@media (min-width: 737px) {
  
  .jetpack-container {
    //background-color: blue;
  }

  .jetpack-img {
    position: absolute;
    top: 50%;
    right: 34%;
    transform: translateY(-50%);
    height: auto;
    width: 9vw;
    min-width: 120px;
    visibility: visible;
  }

}

@media (min-width: 375px) {
  
  #not-for-mobile {
    content: '';
  }
  
}

.about-text-container {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%,-50%);
  //background-color: green;
}

#about-resume-link a{
  font: cyan;
}

.about-contact-container {
  width: 100%;
}

/*
 * Skills
 */

.skills-container {
  height: 50vh;
  min-height: 430px;
  padding: 60px;
  z-index: 1;
  position: relative;
  background-color: #f7f7f7;
  color: #696969;
}

@media (max-width: 576px) {
  
  .skills-container {
    font-size: 0.8em;
    padding: 5px;
  }

}

.skills-content {
  height: 100%;
  width: 100%;
  margin: 0;
}

.front-end-container {
  //background-color: azure;
}

.front-end-content {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.front-end-ul {
  display: inline-block;
  padding: 0;
  list-style-type: none;
}

.back-end-container {
  //background-color: beige;
}

.back-end-content {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.back-end-ul {
  display: inline-block;
  padding: 0;
  list-style-type: none;
}

.more-container {
  //background-color: darkturquoise;
}

.more-content {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.more-ul {
  display: inline-block;
  padding: 0;
  list-style-type: none;
}

/*
 * Experience
 */

.experience-container {
  width: 100%;
  padding: 30px 0px 30px 0px;
  margin: 0;
}

.experience-row-container {
  padding: 20px;
}

.experience-logo-container {
  height: auto;
  padding: 2vh;
}

.experience-logo {
  width: 20vw;
}

.experience-header-row {
  margin: 0;
}

.agent-img {
  display: none;
}

@media (min-width: 576px) {
  .experience-logo {
    float: right;
    width: 8vw;
    max-width: 80px;
  }
  
  .experience-title {
    display: flex;
    align-items: center;
    text-align: left;
  }
  
  .experience-date {
    display: flex;
    align-items: center;
    justify-content: flex-end;
    text-align: right;
  }
  
  .experience-body {
    text-align: left;
    padding-left: 30px;
  }
  
  #second-course-list {
    margin-top: 40px;
    padding: 0;
  }
  
}

@media (min-width: 992px) {

  .agent-img {
    display: block;
    position: fixed;
    top: -60px;
    right: 2%;
    width: 15vw;
    max-width: 255px;
    min-width: 200px;
  }
}
  
/*
 * Contact
 */

.contact-container {
  padding: 50px;
  color: white;
  background-color: #f7f7f7;
}

section#contact {
    background-color: #222;
    background-position: center;
    background-repeat: no-repeat;
}

section#contact .section-heading {
  color: #696969;
  padding-bottom: 20px;
}

section#contact .form-group {
    margin-bottom: 25px;
}

section#contact .form-group input,
section#contact .form-group textarea {
    padding: 20px;
}

section#contact .form-group input.form-control {
    height: auto;
}

section#contact .form-group textarea.form-control {
    height: 236px;
}

section#contact .form-control:focus {
    border-color: #fed136;
    box-shadow: none;
}

section#contact::-webkit-input-placeholder {
    text-transform: uppercase;
    font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-weight: 700;
    color: #bbb;
}

section#contact:-moz-placeholder {
    text-transform: uppercase;
    font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-weight: 700;
    color: #bbb;
}

section#contact::-moz-placeholder {
    text-transform: uppercase;
    font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-weight: 700;
    color: #bbb;
}

section#contact:-ms-input-placeholder {
    text-transform: uppercase;
    font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-weight: 700;
    color: #bbb;
}

section#contact .text-danger {
    color: #e74c3c;
}

.btn {
  color: #fff;
  background-color: #696969;
}

.btn:hover {
  background-color: #bbb;
  cursor: pointer;
}

/*
 * Map
 */

.map-container {
  height: 120px;
  min-height: 100px;
  background-color: #333;
}

.google-map {
  height: 100%;
  width: 100%;
}

